--- a/css/style.css
+++ b/css/style.css
@@ -326,9 +326,16 @@ h1 span{
 
 }
 
-.defaultsection{
-    width:1175px;
-    margin:0 auto;
+.defaultsection {
+    width: 1175px;
+    margin: 0 auto;
     font-family: "Segoe UI Semibold";
     color: #ffffff;
-
+}
+.sectionpad{
+    padding-top: 113px;
+    padding-bottom: 113px;
+}
+.ppad{
+    margin-right: 145px;
+}
